# Molecular-Property-Prediction-System.

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  dvc.yaml  environment.yml  pyproject.toml  vocab_vae_bbbp.json
.dvc/tmp/: lock
.github/workflows/: benchmarks.yml  ci.yml  docker.yml
configs/: config.yaml
configs/dataset/: bbbp.yaml  delaney.yaml  freesolv.yaml  lipo.yaml  tox21.yaml
configs/model/: chemberta.yaml  gat.yaml  gcn.yaml  gin.yaml  mpnn.yaml  multitask.yaml
data/: library.db  processed.dvc  raw.dvc
data/raw/bace_regression/: metadata.txt
data/raw/bbbp/: metadata.txt
data/raw/freesolv/: metadata.txt
data/raw/hiv/: metadata.txt
data/raw/muv/: metadata.txt
data/raw/qm9/: metadata.txt
docs/: PORTFOLIO.md  compute.md
notebooks/: 00_data_audit.ipynb  01_featurization.ipynb  02_baselines.ipynb  03_gnn_models.ipynb  04_interpretability.ipynb
scripts/: analyze_errors.py  client_example.py  create_notebooks.py  download_molnet_datasets.py  generate_benchmark.py  generate_whitepaper.py  index_molecules.py  portfolio_dashboard.py  run_ablation.py  run_baselines.py  train_gin.py  train_gnn.py  train_multitask.py  train_transformer.py  train_vae.py  tune_baselines.py  tune_gnn.py  visualize_chemical_space.py
src/molprop/data/: ingest_chembl.py  ingest_pubchem.py  processor.py  smiles_vocab.py  splits.py  standardize.py  transformer_dataset.py  vae_dataset.py
src/molprop/features/: admet.py  conformers.py  descriptors.py  fingerprints.py  functional_groups.py  graphs.py  scaffolds.py
src/molprop/models/: baselines.py  evaluate.py  explain.py  explain_baselines.py  gnn_base.py  gnn_gat.py  gnn_gcn.py  gnn_gin.py  gnn_mpnn.py  gnn_multitask.py  optimization.py  pareto.py  transformer.py  vae.py  visualize_explanations.py
src/molprop/serving/: api.py  load_model.py  vector_db.py
src/molprop/serving/static/: index.html  main.js  styles.css
src/molprop/storage/: __init__.py  library.py
tests/: test_baselines.py  test_evaluate.py  test_featurizers.py  test_inference.py  test_models.py  test_splits.py  test_standardize.py
