[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molprop"
version = "0.1.0"
description = "Molecular Property Prediction System"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Neha", email = "test@example.com" }
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["molprop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
]
ignore = [
    "E501", # line too long, let formatter handle it
]
