[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molprop"
version = "0.1.0"
description = "Molecular Property Prediction System"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Neha", email = "test@example.com" }
]
dependencies = [
    "rdkit>=2023.9.5",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "chembl_webresource_client>=0.10.8",
    "shap>=0.46.0",
    "optuna>=3.6.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "umap-learn>=0.5.5",
    "scipy>=1.12.0",
    "streamlit>=1.32.0",
    "plotly>=5.19.0",
    "captum>=0.7.0",
    "stpy3dmol>=0.0.1"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["molprop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
]
ignore = [
    "E501", # line too long, let formatter handle it
]
