[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molprop"
version = "1.8.0"
description = "A production-grade, end-to-end platform for predicting molecular properties using GNNs."
keywords = ["molecular-informatics", "gnn", "mlops", "drug-discovery", "pytorch-geometric"]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Jitesh523", email = "test@example.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "rdkit>=2023.9.5",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "chembl_webresource_client>=0.10.8",
    "shap>=0.46.0",
    "optuna>=3.6.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "umap-learn>=0.5.5",
    "scipy>=1.12.0",
    "streamlit>=1.32.0",
    "plotly>=5.19.0",
    "captum>=0.7.0",
    "stmol>=0.0.9",
    "py3Dmol>=2.0",
    "rich>=13.7.1",
    "transformers>=4.40.0",
    "accelerate>=0.29.0",
    "qdrant-client>=1.9.0",
    "tabulate>=0.9.0"
]

[project.scripts]
molprop-dashboard = "molprop.scripts.portfolio_dashboard:main"
molprop-train = "molprop.scripts.train_gnn:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["molprop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "S",   # flake8-bandit
]
ignore = [
    "E501", # line too long, let formatter handle it
    "S101", # allow assert for pytest
]
